@@ -108,6 +108,7 @@ Fixes:
    * Fix bug where genlist would delete items added during selection callback if a clear was queued
    * Tooltips now correctly set NETWM tooltip window type
    * Fix the naviframe item part text to be set properly.
+   * Fix list separator size bug.
 
 Removals:
 
